// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render align 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-lkjn5s"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render as another element 1`] = `
<div
  class="components-truncate wp-components-truncate components-text wp-components-text css-fd3l03"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</div>
`;

exports[`props should render color 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-6lujs1"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render correctly 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-fd3l03"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render custom size 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-kgfxlh"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render display 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-181g4vn"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render highlighted words 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1vx235c"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are 
  </span>
  <mark
    class=" "
    data-g2-component="TextHighlight"
  >
    worth
  </mark>
  <span
    class=""
    data-g2-component="Text"
  >
     melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with highlightCaseSensitive 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1vx235c"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  <span
    class=""
    data-g2-component="Text"
  >
    Some people are worth melting for.
  </span>
</span>
`;

exports[`props should render highlighted words with undefined passed 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-fd3l03"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render isBlock 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-3u9ej"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render lineHeight 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-p8ndxg"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render optimizeReadabilityFor 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-hp28c3"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render size 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1lm7oza"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render truncate 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1g5c1k2"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render upperCase 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-eb2hg3"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render variant 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1u3my9s"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;

exports[`props should render weight 1`] = `
<span
  class="components-truncate wp-components-truncate components-text wp-components-text css-1qyg1ku"
  data-g2-c16t="true"
  data-g2-component="Text"
>
  Some people are worth melting for.
</span>
`;
